--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -6,6 +6,7 @@ body {
 .small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
+  font-size: 22px;
 }
 
 .small-para {
@@ -13,15 +14,17 @@ body {
   font-weight: 800;
 }
 
-.para {
+/* Moved the font size value pair into the shared CSS rule above. */
+/* .para {
   font-size: 22px;
-}
+} */
 
-.confirm {
+/* Shifted this below to allow it to apply last */
+/* .confirm {
   background: green;
   color: white;
   font-weight: bold;
-} 
+}  */
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -29,7 +32,13 @@ body {
   font-size: 20px;
 }
 
-.child {
+.confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
+} 
+/* Added .text class utilising chaining selector to make it more specific. */
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
