--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 .logo {
@@ -14,6 +18,9 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin:0;
+  padding:0;
+  gap:20px;
 }
 
 a {
@@ -22,4 +29,19 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+ul {
+  display:flex;
+  justify-content: left;
+}
+
+.left-links {
+  margin-left:10px;
+  margin-right:auto;
+}
+
+.right-links {
+  margin-right:10px;
+  margin-left:auto;
 }
