--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align:center;
 }
 
 img {
@@ -10,6 +11,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+}
+
+.plants{
+  display:flex;
+  gap:52px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card{
+  display:flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  max-width:200px;
 }
 
 /* do not edit this footer */
