--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -23,4 +25,38 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header{
+  display:flex;
+}
+
+ul {
+  display:flex;
+  list-style-type: none;
+  gap:10px;
+}
+
+.left-links{
+  margin-right:auto;
+}
+
+.right-links{
+  margin-right:20px;
+}
+
+.content1{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer{
+  display:flex;
+  margin-top: auto;
+  margin-bottom: 0px;
 }
