--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,6 +2,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction: column;
 }
 
 .header {
@@ -14,16 +16,34 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  margin: 0;
+}
+
+.body{
+  display:flex;
 }
 
 .sidebar {
-  width: 300px;
   background: royalblue;
   box-sizing: border-box;
+
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding:16px;
+  width:300px;
+}
+
+.content1{
+  display:flex;
+  flex-wrap:wrap;
+  gap:32px;
+  padding: 48px;
+}
+
+.footer {
+  text-align: center;
 }
